Create kafka producer for sending messages.