@@ -1,23 +1,26 @@
 package car.shop.service.impl;
 
 import car.shop.dto.CustomerDto;
+import car.shop.dto.MessageDto;
 import car.shop.entity.Customer;
 import car.shop.mapper.CustomerMapper;
 import car.shop.repository.CustomerRepository;
 import car.shop.service.CustomerService;
+import car.shop.service.kafka.KafkaSenderService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Service
 public class CustomerServiceImpl implements CustomerService {
     private final CustomerRepository customerRepository;
     private final CustomerMapper customerMapper;
+    KafkaSenderService kafkaSenderService;
 
     @Override
     @Transactional
@@ -30,7 +33,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerDto> getByFirstName(String firstName) {
         return customerRepository.findByFirstName(firstName).stream()
                 .map(customerMapper::customerToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -38,7 +41,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerDto> getByMiddleName(String middleName) {
         return customerRepository.findByMiddleName(middleName).stream()
                 .map(customerMapper::customerToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,7 +49,7 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerDto> getByLastName(String lastName) {
         return customerRepository.findByLastName(lastName).stream()
                 .map(customerMapper::customerToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -54,13 +57,15 @@ public class CustomerServiceImpl implements CustomerService {
     public List<CustomerDto> getAll() {
         return customerRepository.findAll().stream()
                 .map(customerMapper::customerToCustomerDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional
     public void create(Customer customer) {
         customerRepository.save(customer);
+        MessageDto messageDto = new MessageDto(LocalDateTime.now(), "Customer created: " + customer.getId());
+        kafkaSenderService.sendMessage("customer-topic", messageDto);
     }
 
     @Override
@@ -75,4 +80,3 @@ public class CustomerServiceImpl implements CustomerService {
         customerRepository.deleteById(id);
     }
 }
-
